2007-02-21: Jason Long <jlong@messiah.edu>
 * t/signer_policy.t: signature should still work even if no value is
   returned from signer policy
 * t/signer.t: now uses v=0.5 signature, which changes the signature
 * t/verifier.t: added three tests of empty body messages
 * lib/Mail/DKIM/Signer.pm: fixed bug where if signer policy was a
   sub ref, and didn't return a true value, the message would get skipped
 * lib/Mail/DKIM/Canonicalization/simple.pm: argh, hack for handling
   empty body
 * lib/Mail/DKIM/MessageParser.pm: fixed bug in handling of messages
   without bodies
 * lib/Mail/DKIM/Signature.pm: output v=0.5 signatures now
 * scripts/dkimsign.pl: new --binary option to disable line-ending conversion

2007-02-19: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/DkSignature: provide default value for a= tag
   (thanks to mark.martinec@ijs.si for the patch)
 * t/corpus/good_dk_2.txt: test for missing q= and a= tags on DomainKey
   signature

2007-02-09: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Verifier.pm, DkSignature.pm: better diagnostic messages;
   allow missing q= tag for domainkey signatures
   (thanks to mark.martinec@ijs.si for the patch)

 -- VERSION 0.22 --

2007-01-19: Jason Long <jlong@messiah.edu>
 * t/verifiter.t: relaxed the OpenSSL check a little more
 * DKIM.pm, README, others: updated copyright to include 2007;
   updated abstract to include DomainKeys; updated version number

2007-01-19: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Verifier.pm: in case of unsupported algorithm,
   canonicalization method, or key protocol, list the bad protocol
   in the error message to make diagnosing easier
 * lib/Mail/DKIM/DkSignature.pm: fix a use-of-undefined-scalar bug

2007-01-17: Jason Long <jlong@messiah.edu>
 * t/verifier.t: fixed testing bug that was too strict about what
   error message OpenSSL generates
 * lib/Mail/DKIM/Verifier.pm: handle OpenSSL panic message better

 -- VERSION 0.21 --

2006-11-27: Jason Long <jlong@messiah.edu>