@@ -1,3 +1,11 @@
+2007-02-22: Jason Long <jlong@messiah.edu>
+ * lib/Mail/DKIM/PublicKey.pm: catch certain OpenSSL errors; tweak
+   diagnostics
+ * lib/Mail/DKIM/Verifier.pm: changed OpenSSL error catching code to
+   match that found in PublicKey; document more possible diagnostic codes
+ * lib/Mail/DKIM/Signature.pm: tweaked diagnostics for missing public key
+ * Makefile.PL: check for Test::Simple, which is required for `make test'
+
 2007-02-21: Jason Long <jlong@messiah.edu>
  * t/signer_policy.t: signature should still work even if no value is
    returned from signer policy
